--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <div class="container">
-    <div id="home" class="flex-center flex-column"></div>
+    <div id="home" class="flex-center flex-column">
+      <h1>Quick Quiz</h1>
+      <a class="btn" href="/game.html">Play</a>
+      <a class="btn" href="/highscores.html">High Scores</a>
+    </div>
   </div>
 </body>
 </html>
